use 'figaro' gem to set local environment variables for Stripe credentials

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ db/*.sqlite3
 .sass-cache
 /config/config.yml
 /config/database.yml
-/config/local_env.yml
 /coverage.data
 /coverage/
 /db/*.javadb/
@@ -73,3 +72,6 @@ pickle-email-*.html
 
 # vim artifacts
 **.swp
+
+# Ignore application configuration
+/config/application.yml
