--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -7,7 +7,11 @@
 # makes 'Your_Gmail_Username' available as ENV["GMAIL_USERNAME"]
 # Add application configuration variables here, as shown below.
 #
-# GMAIL_USERNAME: Your_Username
-# GMAIL_PASSWORD: Your_Password
-# STRIPE_API_KEY: Your_Stripe_API_key
-# STRIPE_PUBLIC_KEY: Your_Stripe_Public_Key
+GMAIL_USERNAME: Your_Username
+GMAIL_PASSWORD: Your_Password
+ADMIN_NAME: First User
+ADMIN_EMAIL: user@example.com
+ADMIN_PASSWORD: please
+ROLES: [admin, silver, gold, platinum]
+STRIPE_API_KEY: Your_Stripe_API_key
+STRIPE_PUBLIC_KEY: Your_Stripe_Public_Key
