build using rails_apps_composer 2.2.30

--- a/config/application.yml
+++ b/config/application.yml
@@ -11,7 +11,7 @@ GMAIL_USERNAME: Your_Username
 GMAIL_PASSWORD: Your_Password
 ADMIN_NAME: First User
 ADMIN_EMAIL: user@example.com
-ADMIN_PASSWORD: please
+ADMIN_PASSWORD: changeme
 ROLES: [admin, silver, gold, platinum]
-STRIPE_API_KEY: Your_Stripe_API_key
-STRIPE_PUBLIC_KEY: Your_Stripe_Public_Key
+# STRIPE_API_KEY: Your_Stripe_API_key
+# STRIPE_PUBLIC_KEY: Your_Stripe_Public_Key
