--- a/config/application.yml
+++ b/config/application.yml
@@ -13,5 +13,5 @@ ADMIN_NAME: First User
 ADMIN_EMAIL: user@example.com
 ADMIN_PASSWORD: changeme
 ROLES: [admin, silver, gold, platinum]
-# STRIPE_API_KEY: Your_Stripe_API_key
-# STRIPE_PUBLIC_KEY: Your_Stripe_Public_Key
+STRIPE_API_KEY: Your_Stripe_API_key
+STRIPE_PUBLIC_KEY: Your_Stripe_Public_Key
