--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -25,3 +25,6 @@ STRIPE_API_KEY: Your_Stripe_API_key
 STRIPE_PUBLIC_KEY: Your_Stripe_Public_Key
 AMAZON_ACCESS_KEY: Your_Amazon_Access_Key
 AMAZON_SECRET_KEY: Your_Amazon_Secret_Key
+GITHUB_OWNER: 'bastosmichael'
+GITHUB_REPO: 'rails-stripe-membership-saas'
+GITHUB_TOKEN: '40 bit key'
