verifying local_env.yml is git ignored

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ db/*.sqlite3
 .sass-cache
 /config/config.yml
 /config/database.yml
-#/config/local_env.yml  # uncomment for use with local_env.yml to protect your keys
+/config/local_env.yml
 /coverage.data
 /coverage/
 /db/*.javadb/
