--- a/config/local_env.yml
+++ b/config/local_env.yml
@@ -1,3 +1,4 @@
+#testchange
 # Be sure to restart your server when you modify this file.
 # Add account settings and API keys here.
 # NOTE : This file MUST be listed in .gitignore to keep your settings secret!
