perfected and protected secrets.yml and local_env.yml

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,5 +1,7 @@
 # Be sure to restart your server when you modify this file.
+# See config/local_env.yml for explanations and instructions to keep your data private 
 
+# NOTE : In deployed production :
 # Your secret key is used for verifying the integrity of signed cookies.
 # If you change this key, all old signed cookies will become invalid!
 
@@ -7,10 +9,9 @@
 # no regular words or you'll be exposed to dictionary attacks.
 # You can use `rake secret` to generate a secure secret key.
 
-# Make sure the secrets in this file are kept private
-# if you're sharing your code publicly, by adding /config/secrets.yml to your .gitignore file
+# Because the secrets.yml file must be present in the git repository, we use
+# config/local_env.yml to store our private data, and it is in the .gitignore file.
 
-# The best advice is to use Unix environment variables in the config/secrets.yml file.
 # If you put the config/secrets.yml file into .gitignore, you won’t be able to deploy to Heroku.
 # Example : 
 #
@@ -47,6 +48,9 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
+  admin_name: <%= ENV["ADMIN_NAME"] %>
+  admin_email: <%= ENV["ADMIN_EMAIL"] %>
+  admin_password: <%= ENV["ADMIN_PASSWORD"] %>
   email_provider_username: <%= ENV["MAILCHIMP_USERNAME"] %>
   email_provider_password: <%= ENV["MAILCHIMP_PASSWORD"] %>
   domain_name: <%= ENV["DOMAIN_NAME"] %>
