--- a/config/local_env_example.yml
+++ b/config/local_env_example.yml
@@ -1,7 +1,12 @@
-# This file is renamed to local_env.yml for use
+# Rename this file to local_env.yml for use, to keep your data private.
+# NOTE: The local_env.yml file MUST FIRST be listed in .gitignore BEFORE you save it, to keep your settings secret
+# Do that now by opening your git ignore file : $ open -e .gitignore
+# NOW, uncomment this line /config/local_env.yml
+
+# If you accidentally save your file, then uncomment the git ignore statement, your file will still show in the repository, including changes.  To resolve do this : $ git rm configl/local_env.yml
+# Only then, will it be safe to add your private data into this file.
 
 # Add account settings and API keys here.
-# NOTE: The local_env.yml file MUST be listed in .gitignore to keep your settings secret!
 # Each entry in local_env.yml gets set as a local environment variable.
 # The local_env.yml file overrides ENV variables in the Unix shell.
 # For example, setting:
