--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -54,6 +54,6 @@ production:
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
-  zstripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
+  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   roles: <%= ENV["ROLES"] %>
