conforming to master, removing files

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ db/*.sqlite3
 /doc/app/
 /doc/features.html
 /doc/specs.html
+/log/*
 /public/cache
 /public/stylesheets/compiled
 /public/system/*
