--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,12 +21,12 @@ development:
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
   stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
-  secret_key_base: very_long_random_string
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
 test:
   domain_name: example.com
-  secret_key_base: very_long_random_string
-
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
