Fetch required stripe api keys

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,8 +19,8 @@ development:
   domain_name: example.com
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
-  stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
-  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
+  stripe_api_key: <%= ENV.fetch("STRIPE_API_KEY") %>
+  stripe_publishable_key: <%= ENV.fetch("STRIPE_PUBLISHABLE_KEY") %>
   secret_key_base: very_long_random_string
 
 test:
@@ -38,6 +38,6 @@ production:
   domain_name: example.com
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
-  stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
-  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
+  stripe_api_key: <%= ENV.fetch("STRIPE_API_KEY") %>
+  stripe_publishable_key: <%= ENV.fetch("STRIPE_PUBLISHABLE_KEY") %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
