Stripe API Card spec passing

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -17,10 +17,10 @@ development:
   email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
   email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
   domain_name: example.com
-  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
-  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
-  stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
-  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
+  mailchimp_api_key: <%= ENV.fetch("MAILCHIMP_API_KEY") %>
+  mailchimp_list_id: <%= ENV.fetch("MAILCHIMP_LIST_ID") %>
+  stripe_api_key: <%= ENV.fetch("STRIPE_API_KEY") %>
+  stripe_publishable_key: <%= ENV.fetch("STRIPE_PUBLISHABLE_KEY") %>
   secret_key_base: very_long_random_string
 
 test:
@@ -35,9 +35,9 @@ production:
   admin_password: <%= ENV["ADMIN_PASSWORD"] %>
   email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
   email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
-  domain_name: example.com
-  mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
-  mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
-  stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
-  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
+  domain_name: <%= ENV["DOMAIN_NAME"] %>
+  mailchimp_api_key: <%= ENV.fetch("MAILCHIMP_API_KEY") %> 
+  mailchimp_list_id: <%= ENV.fetch("MAILCHIMP_LIST_ID") %> 
+  stripe_api_key: <%= ENV.fetch("STRIPE_API_KEY") %>
+  stripe_publishable_key: <%= ENV.fetch("STRIPE_PUBLISHABLE_KEY") %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
