--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,12 +11,12 @@
 # if you're sharing your code publicly.
 
 development:
-  admin_name: First User
-  admin_email: user@example.com
-  admin_password: changeme
+  admin_name: <%= ENV["ADMIN_NAME"] %>
+  admin_email: <%= ENV["ADMIN_EMAIL"] %>
+  admin_password: <%= ENV["ADMIN_PASSWORD"] %>
   email_provider_username: <%= ENV["GMAIL_USERNAME"] %>
   email_provider_password: <%= ENV["GMAIL_PASSWORD"] %>
-  domain_name: example.com
+  domain_name: <%= ENV["DOMAIN_NAME"] %>
   mailchimp_api_key: <%= ENV["MAILCHIMP_API_KEY"] %>
   mailchimp_list_id: <%= ENV["MAILCHIMP_LIST_ID"] %>
   stripe_api_key: <%= ENV["STRIPE_API_KEY"] %>
